--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "clipboard": "^2.0.4",
     "fastclick": "^1.0.6",
     "qrcode": "^1.4.1",
     "vue": "^2.5.2",
